# GitHub-Learning-Lab

./: README.md  hello.py  notes.md  pyproject.toml  requirements.txt
.github/workflows/: python-check.yml  python-tests.yml
src/app/: greet.py
tests/: test_greet.py
